discussion/kv_engine/179851/179851_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Reduce cost of including kv_bucket.h

kv_bucket.h is the most expensive header as reported by
clang-build-analyzer [1]:

    *** Expensive headers:
    22311 ms: ../kv_engine/engines/ep/src/kv_bucket.h (included 54 times, avg 413 ms), included via:
      nexus_kvstore_test.cc.o evp_store_single_threaded_test.h kv_bucket_test.h  (700 ms)
      range_scan_test.cc.o ep_bucket.h  (683 ms)
      bucket_quota_change_test.cc.o evp_store_single_threaded_test.h kv_bucket_test.h  (658 ms)
      kv_bucket_test.cc.o kv_bucket_test.h  (648 ms)
      ...

Reduce the number of headers kv_bucket.h includes; by a combination of:

- Removing unnecessary headers (not directly needed by kv_bucket.h)

- Forward-declaring expensive types and moving the types into their
  own headers (so only other files which need the expensive type pay
  the cost of including them).

[1]: https://cv.jenkins.couchbase.com/view/Nightly/job/kv_engine-nightly-clang-build-analyzer/lastSuccessfulBuild/artifact/clang_build_analyzer_everything.log

Change-Id: I5da10ddd3a6362f4f371a58d909227360b323b97

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-16 08:54:20.000000000
Message: 
Patch Set 2: Patch Set 1 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-16 09:43:13.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20452/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rollback_callback.h:22:50: error: use of undeclared identifier "KVFileHandle" [clang-diagnostic-error]
    virtual void setKVFileHandle(std::unique_ptr<KVFileHandle> handle) {
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rollback_callback.h:26:19: error: unknown type name "KVFileHandle" [clang-diagnostic-error]
    virtual const KVFileHandle* getKVFileHandle() const {
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rollback_callback.h:33:21: error: use of undeclared identifier "KVFileHandle" [clang-diagnostic-error]
    std::unique_ptr<KVFileHandle> kvFileHandle;
                    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20452/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rollback_callback.h:22:50:
error: use of undeclared identifier "KVFileHandle" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20452/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49447/ : FAILURE

Failure of GoogleTest "WarmupDiskTest.noDataFileCollectionCountsTest":

<pre>
[ RUN      ] WarmupDiskTest.noDataFileCollectionCountsTest
unknown file: error: C++ exception with description "remove: Incorrect function.: "C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db/test.084501\0.couch.1"" thrown in the test body.
[  FAILED  ] WarmupDiskTest.noDataFileCollectionCountsTest (38 ms)
WarmupDiskTest.noDataFileCollectionCountsTest
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49447/ )

Failure of an engine_testapp test:

<pre>
Running [159/160]: test bucket quota reduction.....\kv_engine\engines\ep\tests\ep_testsuite.cc:8497 Test failed: `" (Expected `success", got `temporary failure" - We should be able to store an item as the BucketQuotaChangeTask should not enforce memory limits until memory usage is low enough.)
(233 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49447/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21808/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/persistent_magma_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/persistent_magma_value_only
[2022-09-16T09:19:35.979Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:188: Failure
[2022-09-16T09:19:35.979Z] Expected: (0) != (expectedCount), actual: 0 vs 0
[2022-09-16T09:19:35.979Z] unexpected error:no memory for key:cid:0x0:diffKey
[2022-09-16T09:19:35.979Z] Google Test trace:
[2022-09-16T09:19:35.979Z] ../kv_engine/engines/ep/tests/module_tests/bucket_quota_change_test.cc:339: 
[2022-09-16T09:19:35.979Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:272: Failure
[2022-09-16T09:19:35.979Z] Expected equality of these values:
[2022-09-16T09:19:35.979Z]   expected
[2022-09-16T09:19:35.979Z]     Which is: 1
[2022-09-16T09:19:35.979Z]   actualFlushed
[2022-09-16T09:19:35.979Z]     Which is: 0
[2022-09-16T09:19:35.979Z] Unexpected items (0) in flush_vbucket_to_disk(vb:0, 1)
[2022-09-16T09:19:35.979Z] Google Test trace:
[2022-09-16T09:19:35.979Z] ../kv_engine/engines/ep/tests/module_tests/bucket_quota_change_test.cc:339: 
[2022-09-16T09:19:35.979Z] [  FAILED  ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (66 ms)
EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/persistent_magma_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21808/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23567/ : FAILURE

Failure of GoogleTest "MeteringTest/MeteringTest.TTL_Expiry_Compaction/Metered":

<pre>
[ RUN      ] MeteringTest/MeteringTest.TTL_Expiry_Compaction/Metered
[2022-09-16T09:31:09.394Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:3142: Failure
[2022-09-16T09:31:09.394Z] Expected equality of these values:
[2022-09-16T09:31:09.394Z]   1
[2022-09-16T09:31:09.394Z]   after["wu"].get<std::size_t>() - before["wu"].get<std::size_t>()
[2022-09-16T09:31:09.394Z]     Which is: 0
[2022-09-16T09:31:09.394Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:3145: Failure
[2022-09-16T09:31:09.394Z] Expected: (expiredBefore) != (expiredAfter), actual: 3 vs 3
[2022-09-16T09:31:09.394Z] [  FAILED  ] MeteringTest/MeteringTest.TTL_Expiry_Compaction/Metered, where GetParam() = 4-byte object <00-00 00-00> (2544 ms)
MeteringTest/MeteringTest.TTL_Expiry_Compaction/Metered
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23567/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19674/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41567/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10260/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10161/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22429/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22797/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30827/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
